Groups filter doesn't overflow. Fixes #404

--- a/client/css/_viewer.styl
+++ b/client/css/_viewer.styl
@@ -370,6 +370,13 @@ annotations-control-height = 30px
     color white
     line-height annotations-control-height
     margin-left 75px
+    padding-right 5px
+    white-space nowrap
+    overflow hidden
+    text-overflow ellipsis
+
+    span
+      margin-left 3px
 
     span::after
       content ","
